--- a/index.html
+++ b/index.html
@@ -61,17 +61,13 @@
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Acerca de...<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Try It Now!
-                </a>
-            </div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="https://mobirise.co">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>Curriculum</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="cid-rXAdiQYtiF mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rXAdiQYtiF mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -128,7 +124,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
 
     
 
-    <div class="full-screen"><div class="mbr-slider slide carousel" data-keyboard="false" data-ride="false" data-interval="false" data-pause="false"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider1-4" class=" active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider1-4" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider1-4" data-slide-to="2"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/background1.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/background1.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-1">SERVICIOS</h2><p class="lead mbr-text mbr-fonts-style display-5">Elija entre la gran selección de bloques prediseñados más recientes: jumbotrons,  hero images, desplazamiento con paralaje, fondos con videos, menú de hamburguesa, encabezado fijo y más.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-success display-4" href="https://mobirise.com">PARA WINDOWS</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">PARA MAC</a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/background2.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/background2.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-left"><h2 class="mbr-fonts-style display-1">DIAPOSITIVA DE VIDEO</h2><p class="lead mbr-text mbr-fonts-style display-5">Diapositiva con fondo de video de youtube y superposición con color. El título y el texto están alineados a la izquierda.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-primary display-4" href="https://mobirise.com">PARA WINDOWS</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">PARA MAC</a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/background3.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/background3.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-1">DIAPOSITIVA DE IMAGEN</h2><p class="lead mbr-text mbr-fonts-style display-5">Elija entre la gran selección de bloques prediseñados más recientes: jumbotrons,  hero images, desplazamiento con paralaje, fondos con videos, menú de hamburguesa, encabezado fijo y más.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-info display-4" href="https://mobirise.com">PARA WINDOWS</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">PARA MAC</a></div></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-4"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-4"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
+    <div class="full-screen"><div class="mbr-slider slide carousel" data-keyboard="false" data-ride="false" data-interval="false" data-pause="false"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider1-4" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider1-4" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider1-4" class=" active" data-slide-to="2"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-1920x936.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.6;"></div><img src="assets/images/mbr-1920x936.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-1">SERVICIOS<br><br></h2><p class="lead mbr-text mbr-fonts-style display-5">Estamos conformados por especialistas de las distintas ramas del servicio tecnico industrial como lo son el mantenimiento a maquinaria de uso pesado, portuario, ferroviario, de elevacion y manipulacion de carga.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-success display-4" href="https://mobirise.com">MANTENIMIENTO</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">REPARACION</a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/background2.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/background2.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-1">ASESORAMIENTO<br><br></h2><p class="lead mbr-text mbr-fonts-style display-5">Diapositiva con fondo de video de youtube y superposición con color. El título y el texto están alineados a la izquierda.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-primary display-4" href="https://mobirise.com">PARA WINDOWS</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">PARA MAC</a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/background3.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/background3.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-1">CAPACITACION<br><br></h2><p class="lead mbr-text mbr-fonts-style display-5">Elija entre la gran selección de bloques prediseñados más recientes: jumbotrons,  hero images, desplazamiento con paralaje, fondos con videos, menú de hamburguesa, encabezado fijo y más.</p><div class="mbr-section-btn" buttons="0"><a class="btn btn-info display-4" href="https://mobirise.com">PARA WINDOWS</a> <a class="btn  btn-white-outline display-4" href="https://mobirise.com">PARA MAC</a></div></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-4"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-4"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
 
 </section>
 
@@ -151,19 +147,17 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                 <div class="card pl-3 pr-3 pb-5">
                     <div class="mbr-card-img-title">
                         <div class="card-img pb-3">
-                             <span class="mbri-upload mbr-iconfont"></span>
+                             <span class="mbr-iconfont mbri-timer"></span>
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Host Anywhere                     
-                            </h4>
+                                Tiempo de respuesta</h4>
                         </div>
                     </div>                
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Publish your website to a local drive, FTP or host on Amazon S3, Google Cloud, Github Pages. Don't be a hostage to just one platform or service provider.
-                        </p>
+                            Disponibilidad del servicio 24/7 para servicios de emergencia</p>
                     </div>
                 </div>
 
@@ -194,18 +188,17 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                 <div class="card pl-3 pr-3 pb-5">
                     <div class="mbr-card-img-title">
                         <div class="card-img pb-3">
-                             <span class="mbri-features mbr-iconfont"></span>
+                             <span class="mbr-iconfont mbri-target"></span>
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Over 400 Amazing Blocks
-                            </h4>
+                                Competencia</h4>
                         </div>
                     </div>                
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Mobirise offers several themes that include sliders, galleries, article blocks, counters, accordions, video and many more.</p>
+                            Contamos con personal capacitado para la atencion de manera local, remota o en nuestras propias instalaciones</p>
                     </div>
                 </div>
 
@@ -294,7 +287,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1PjcpHb0ctb166lB6AJnox/My3CbUvlDJUNmS/JC0cDV0q8uLrzZc1CNdhsE1WVEX2N/1tpF9DkgQZA/Ueo3oQowDnouqOprBVi0jwjNZxefFlEVE8sw2UvIiDCI/bOH">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MtXo4qtECMYGRKzm3q2ibEoD6bIkGL2jJY7pVbuX0c8b5LS+s+46Wn9VBy+RGcKutxVbAq1DdJk//CQKTrIJh7vBQuFtkb9Z/38ZvOGbAdGIbbTRnN9NPEAZ3mAfK699">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -412,7 +405,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo20.png" alt="Mobirise">
+                        <img src="assets/images/logo21.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
