create github pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rXAdiQYtiF mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="cid-rXAdiQYtiF mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -135,12 +135,8 @@ una empresa dedicada a ofrecer productos y servicios relacionados
     
 
     <div class="container">
-        <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">
-            Image between two columns
-        </h2>
-        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">
-            Click any text or icon to edit or style it. Use the block parameters to hide/show text or icons and change media size.
-        </h3>
+        <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">Fortalezas de nuestro servicio</h2>
+        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Tenemos identificado los puntos que nos hacen ser fuertes y hemos hecho de ellos los peldaños hacia la satisfaccion de las expectativas de nuestros clientes.</h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
@@ -164,18 +160,16 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                 <div class="card pl-3 pr-3">
                     <div class="mbr-card-img-title">
                         <div class="card-img pb-3">
-                            <span class="mbri-drag-n-drop2 mbr-iconfont"></span>
+                            <span class="mbr-iconfont mbri-edit"></span>
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Easy and Simple to Use
-                            </h4>
+                                Analisis previo</h4>
                         </div>
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Just drop the blocks into the page, edit content inline and publish - no technical skills required.
-                        </p>
+                            Realizamos un diagnostico de los problemas para asegurar la operatividad de los equipos</p>
                     </div>
                 </div>
             </div>
@@ -198,7 +192,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Contamos con personal capacitado para la atencion de manera local, remota o en nuestras propias instalaciones</p>
+                            Contamos con personal capacitado para la atencion de manera local, remota</p>
                     </div>
                 </div>
 
@@ -208,15 +202,12 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                             <span class="mbri-sites mbr-iconfont"></span>
                         </div>
                         <div class="mbr-crt-title">
-                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                Unlimited Sites
-                            </h4>
+                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">Garantia en mano de obra</h4>
                         </div>
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                        </p>
+                            Ofrecemos el respaldo de nuestro trabajo&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -235,14 +226,12 @@ una empresa dedicada a ofrecer productos y servicios relacionados
         <div class="row justify-content-center">
             <div class="media-container-column title col-12 col-md-10">
                 <h2 class="align-left mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
-                    BACKGROUND IMAGE
-                </h2>
-                <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">
-                    Shape your future web project with sharp design and refine coded functions
-                </h3>
-                <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
-                    Background image with solid color overlay and parallax effect. Develop fully responsive, mobile-ready websites that look amazing on any devices and browsers
-                </p>
+                    SATISFACCION</h2>
+                <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">La Calidad de nuestros servicios y productos se reflejan en su
+ presentación: Disciplina, limpieza, organización y atención. Esto nos permite garantizar la satisfacción de nuestros clientes.</h3>
+                <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">Tenemos dentro de nuestras opciones el uso de pólizas de
+servicios que se adecuan a las necesidades operativas de
+nuestros clientes.</p>
                 <div class="mbr-section-btn align-left py-4">
                     <a class="btn btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
                     <a class="btn btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
@@ -260,7 +249,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:Ej9DYWxsZSAxNyAxMTMsIElnbmFjaW8gWmFyYWdvemEsIDg5NTEwIENkIE1hZGVybywgVGFtcHMuLCBNZXhpY28iGhIYChQKEgnXzGbPrfnXhRE1-6cw0b3tdRBx" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:Ej9DYWxsZSAxNyAxMTMsIElnbmFjaW8gWmFyYWdvemEsIDg5NTEwIENkIE1hZGVybywgVGFtcHMuLCBNZXhpY28iGhIYChQKEgnXzGbPrfnXhRE1-6cw0b3tdRBx" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -287,7 +276,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MtXo4qtECMYGRKzm3q2ibEoD6bIkGL2jJY7pVbuX0c8b5LS+s+46Wn9VBy+RGcKutxVbAq1DdJk//CQKTrIJh7vBQuFtkb9Z/38ZvOGbAdGIbbTRnN9NPEAZ3mAfK699">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dpPXZZV6Zlx8dh68crwB1r+rSO+rUrDW5D0dC9zUQADufe39gn1TLS++rC07fv6+iW3l4/c0ZmKZ2HRP1kNqaQ2sOJyacVkxFYLwx/GPGr6w9zn6ik5KmPDEHG0mG2qP">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -405,7 +394,7 @@ una empresa dedicada a ofrecer productos y servicios relacionados
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.co/">
-                        <img src="assets/images/logo21.png" alt="Mobirise">
+                        <img src="assets/images/logo22.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
